fixed port wrap

--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -28,3 +28,21 @@ transition: var(--transition);
     color: var(--color-primary);
 } 
 
+.portfolio__content{
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 2rem ;
+}
+
+.portfolio__details{
+
+    display: flex;
+    gap: 1rem;
+}
+
+.portfolio__details__icon{
+
+    margin-top: 6px;
+    color: var(--color-primary);
+}
